@@ -1,0 +1,14 @@
+/**
+ * Copyright (c) Tiny Technologies, Inc. All rights reserved.
+ * Licensed under the LGPL or a commercial license.
+ * For LGPL see License.txt in the project root for license information.
+ * For commercial licenses see https://www.tiny.cloud/
+ */
+
+const whiteSpaceRegExp = /^[ \t\r\n]*$/;
+
+const isWhitespaceText = (text: string): boolean => whiteSpaceRegExp.test(text);
+
+export {
+  isWhitespaceText
+};
